bugfix (all-section): Fix spacing title and description

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -76,7 +76,7 @@ $gray: #999999;
 
 .main-section-title {
   text-align: center;
-  margin: 20px 195px 0 195px;
+  margin-top: 20px;
 
   font-style: normal;
   font-weight: 800;
@@ -117,7 +117,7 @@ $gray: #999999;
 
 .mobile-app-section-title {
   display: block;
-  margin: 0 290px;
+  //margin: 0 160px;
 
   font-style: normal;
   font-weight: 700;
@@ -147,7 +147,7 @@ $gray: #999999;
 
 .mobile-app-section-description {
   display: block;
-  margin: 50px 190px 0 190px;
+  margin: 50px 0px 0 0px;
 
   text-align: center;
 }
@@ -280,9 +280,9 @@ $gray: #999999;
   color: #FFFFFF;
 }
 
-.services-section-button {
-  margin-top: 20px;
-}
+//.services-section-button {
+//  margin-top: 20px;
+//}
 
 .services-section-cards {
   margin-top: 70px;
@@ -295,6 +295,10 @@ $gray: #999999;
   font-weight: 600;
   font-size: 18px;
   color: #000000;
+}
+
+.services-section-card-description {
+  margin-top: 30px;
 }
 
 .services-section-card-title .internal-text {
@@ -334,7 +338,7 @@ $gray: #999999;
 
 .ours-projects-section-description {
   text-align: center;
-  margin: 50px 190px 0 190px;
+  margin-top: 50px;
 }
 
 .ours-projects-section-image {
